# speckit-bedrock-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .terraformignore  CHANGELOG.md  env.example  pyproject.toml  requirements.txt
.cursor/commands/: speckit.plan.md
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
docs/: LOCAL_TESTING.md
specs/001-document-rag-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-document-rag-api/checklists/: requirements.md
specs/001-document-rag-api/contracts/: api-contract.md
src/api/: auth.py  config.py  main.py  rate_limit.py  run.py
src/api/routes/: documents.py  rag.py
src/models/: document.py
src/observability/: logging.py  telemetry.py
src/services/: batch_process.py  embedding_service.py  extract_service.py  process_service.py  rag_service.py  retrieval_service.py  upload_service.py
src/storage/: metadata.py  s3.py  vectors.py
terraform/: bedrock.tf  main.tf  outputs.tf  variables.tf  vectors.tf
